--- a/index.html
+++ b/index.html
@@ -4,9 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIT</title>
+    <title>Degradados - Transformaciones, transiciones y Animaciones - Clase 8 </title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+<linkrel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
 </head>
 <body>
-    
+    <header>
+        <h1>Degradados - Transformaciones, transiciones y Animaciones </h1>
+    </header>
+    <nav>menu</nav>
+    <main>
+        <h2>DEGRADADOS</h2>
+        <h3>Lineal</h3>
+        <div class="gradiente-lineal">
+            <!-- esto est vacio-->
+        </div>
+        <h3>Radial</h3>
+        <div class="gradiente-radial">
+        </div>
+        <hr>
+        <h2>TRANSICION</h2>
+        <h3>Hover</h3>
+        <div class="transicion">lorem sdasd asdlasdasda sdasd asd as dasd  asd</div>
+        <h2>TRANSFORMACIONES</h2>
+        <h3>Translate</h3>
+        <div class="translate"></div>
+        <h3>Rotate</h3>
+        <div class="rotate"></div>
+        <h3>Scale</h3>
+        <div class="scale"> </div>
+        <h3>Skew</h3>
+        <div class="skew"></div>
+        <hr>
+        <h2>ANIMACION</h2>
+        <div class="animacion"></div>
+    </main>
+    <footer>pie de pagina</footer>
 </body>
 </html>
